--- a/style.css
+++ b/style.css
@@ -24,8 +24,8 @@ section.pub-list {
     background: white;
     margin: 15px;
     padding: 10px;
-    max-width: 250px;
-    text-align: center;
+    max-width: 300px;
+    text-align: left;
     box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     border-radius: 8px;
 }
